# kfs

./: .gitignore  Makefile  README.md  boot.asm  boot.s  i386-elf-cross.txt  kernel.vala  meson.build  meson_options.txt  screen.vala
kernel/: assert.vala  color.vala  cpu.asm  cpu.vapi  idt.asm  idt.h  idt.vala  idt.vapi  keyboard.vala  meson.build  mouse.vala  profile.vala  queue.vala  serial_print.vala  timer.vala  vga.vala
kernel/idt/: divide.vala  idt.asm  idt.vala  keyboard.vala  meson.build
kernel/idt/handler/: divide.vala  handler.asm  keyboard.vala  meson.build  mouse.vala  timer.vala
lib/: meson.build  slib.vapi
lib/alloc/: dummy.c  ft_calloc.c  meson.build  strdup.c
lib/char/: isalnum.c  isalpha.c  isascii.c  isdigit.c  isprint.c  isspace.c  meson.build  tolower.c  toupper.c
lib/include/: ctype.h  libft.h  stdlib.h
lib/memory/: bzero.c  bzero.vala  memchr.c  memchr.vala  memcmp.c  memcmp.vala  memcpy.c  memcpy.vala  memmove.c  memmove.vala  memset.c  memset.vala  memsetw.vala  meson.build
lib/printf/: meson.build  printf.vala
lib/string/: atoi.c  atoi.vala  itoa.c  meson.build  strcat.c  strcat.vala  strchr.c  strchr.vala  strcmp.c  strcmp.vala  strcpy.c  strcpy.vala  strlcat.c  strlcpy.c  strlen.c  strlen.vala  strncmp.c  strncmp.vala  strnstr.c  strnstr.vala  strrchr.c  strrchr.vala  strstr.c  strstr.vala
src/: assert.vala  color.vala  cpu.asm  helper.asm  kernel.vala  keyboard.vala  meson.build  printf.vala  profile.vala  screen.vala  vga.vala
vapi/: cpu.vapi  helper.vapi  posix.vapi
